[gd_scene load_steps=4 format=3 uid="uid://bk5magi8dnwgj"]

[ext_resource type="Script" path="res://prefabs/battle/battle_animation_manager.gd" id="1_rvftt"]
[ext_resource type="PackedScene" uid="uid://cm4jsnjutjfu6" path="res://prefabs/battle/combatant_node.tscn" id="1_tdlew"]
[ext_resource type="Script" path="res://scripts/battle/battle_scene/battlefield_shade.gd" id="2_xle2k"]

[node name="BattleAnimationManager" type="Node2D"]
script = ExtResource("1_rvftt")

[node name="GlobalMarker" type="Marker2D" parent="."]
position = Vector2(-5, -27)
gizmo_extents = 5.0
metadata/_edit_lock_ = true

[node name="PlayerTeamMarker" type="Marker2D" parent="."]
position = Vector2(-19, -26)
gizmo_extents = 5.0
metadata/_edit_lock_ = true

[node name="EnemyTeamMarker" type="Marker2D" parent="."]
position = Vector2(9, -28)
gizmo_extents = 5.0
metadata/_edit_lock_ = true

[node name="PlayerCombatant" parent="." node_paths=PackedStringArray("allyTeamMarker", "enemyTeamMarker", "globalMarker") groups=["BattleCombatantNode"] instance=ExtResource("1_tdlew")]
z_index = 1
position = Vector2(-44, -5)
leftSide = true
battlePosition = "You"
allyTeamMarker = NodePath("../PlayerTeamMarker")
enemyTeamMarker = NodePath("../EnemyTeamMarker")
globalMarker = NodePath("../GlobalMarker")
metadata/_edit_lock_ = true

[node name="SelectCombatantBtn" parent="PlayerCombatant" index="0"]
focus_neighbor_left = NodePath(".")

[node name="OnAttackPos" parent="PlayerCombatant" index="3"]
position = Vector2(16, 0)

[node name="OnAssistPos" parent="PlayerCombatant" index="4"]
position = Vector2(-4, -16)

[node name="MinionCombatant" parent="." node_paths=PackedStringArray("allyTeamMarker", "enemyTeamMarker", "globalMarker") groups=["BattleCombatantNode"] instance=ExtResource("1_tdlew")]
z_index = 1
position = Vector2(-60, -41)
leftSide = true
battlePosition = "Ally"
allyTeamMarker = NodePath("../PlayerTeamMarker")
enemyTeamMarker = NodePath("../EnemyTeamMarker")
globalMarker = NodePath("../GlobalMarker")
metadata/_edit_lock_ = true

[node name="SelectCombatantBtn" parent="MinionCombatant" index="0"]
focus_neighbor_left = NodePath(".")

[node name="OnAttackPos" parent="MinionCombatant" index="3"]
position = Vector2(16, 0)

[node name="OnAssistPos" parent="MinionCombatant" index="4"]
position = Vector2(4, 16)

[node name="EnemyCombatant1" parent="." node_paths=PackedStringArray("allyTeamMarker", "enemyTeamMarker", "globalMarker") groups=["BattleCombatantNode"] instance=ExtResource("1_tdlew")]
z_index = 1
position = Vector2(36, -28)
battlePosition = "Center"
allyTeamMarker = NodePath("../EnemyTeamMarker")
enemyTeamMarker = NodePath("../PlayerTeamMarker")
globalMarker = NodePath("../GlobalMarker")
metadata/_edit_lock_ = true

[node name="SelectCombatantBtn" parent="EnemyCombatant1" index="0"]
focus_neighbor_right = NodePath(".")

[node name="OnAttackPos" parent="EnemyCombatant1" index="3"]
position = Vector2(-16, 0)

[node name="OnAssistPos" parent="EnemyCombatant1" index="4"]
position = Vector2(16, 0)

[node name="EnemyCombatant2" parent="." node_paths=PackedStringArray("allyTeamMarker", "enemyTeamMarker", "globalMarker") groups=["BattleCombatantNode"] instance=ExtResource("1_tdlew")]
z_index = 1
position = Vector2(52, -59)
battlePosition = "Top"
allyTeamMarker = NodePath("../EnemyTeamMarker")
enemyTeamMarker = NodePath("../PlayerTeamMarker")
globalMarker = NodePath("../GlobalMarker")
metadata/_edit_lock_ = true

[node name="SelectCombatantBtn" parent="EnemyCombatant2" index="0"]
focus_neighbor_right = NodePath(".")

[node name="OnAttackPos" parent="EnemyCombatant2" index="3"]
position = Vector2(-16, 0)

[node name="OnAssistPos" parent="EnemyCombatant2" index="4"]
position = Vector2(0, 16)

[node name="EnemyCombatant3" parent="." node_paths=PackedStringArray("allyTeamMarker", "enemyTeamMarker", "globalMarker") groups=["BattleCombatantNode"] instance=ExtResource("1_tdlew")]
z_index = 1
position = Vector2(58, 1)
battlePosition = "Bottom"
allyTeamMarker = NodePath("../EnemyTeamMarker")
enemyTeamMarker = NodePath("../PlayerTeamMarker")
globalMarker = NodePath("../GlobalMarker")
metadata/_edit_lock_ = true

[node name="SelectCombatantBtn" parent="EnemyCombatant3" index="0"]
focus_neighbor_right = NodePath(".")

[node name="OnAttackPos" parent="EnemyCombatant3" index="3"]
position = Vector2(-16, 0)

[node name="OnAssistPos" parent="EnemyCombatant3" index="4"]
position = Vector2(0, -16)

[node name="BattlefieldShade" type="ColorRect" parent="."]
z_index = 1
offset_left = -160.0
offset_top = -98.0
offset_right = 160.0
offset_bottom = 82.0
mouse_filter = 2
color = Color(0, 0, 0, 0)
script = ExtResource("2_xle2k")

[connection signal="combatant_animation_unit_complete" from="." to="." method="_on_combatant_animation_unit_complete"]

[editable path="PlayerCombatant"]
[editable path="PlayerCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="PlayerCombatant/HPTag/OrbDisplay"]
[editable path="MinionCombatant"]
[editable path="MinionCombatant/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="MinionCombatant/HPTag/OrbDisplay"]
[editable path="EnemyCombatant1"]
[editable path="EnemyCombatant1/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="EnemyCombatant1/HPTag/OrbDisplay"]
[editable path="EnemyCombatant2"]
[editable path="EnemyCombatant2/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="EnemyCombatant2/HPTag/OrbDisplay"]
[editable path="EnemyCombatant3"]
[editable path="EnemyCombatant3/SpriteContainer/FrontParticleContainer/HitParticleEmitter"]
[editable path="EnemyCombatant3/HPTag/OrbDisplay"]
